THINK i fixed hamburger visible in upper left in tablet and up

--- a/code/style.css
+++ b/code/style.css
@@ -401,7 +401,7 @@ footer p {
     display: none;
   }
   
-  .left > .hamburger,
+  header > .left > .hamburger,
   header > .right > .subscribe,
   .podcasts,
   .full-length-news {
